--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "express": "^4.13.3",
     "file-loader": "^0.9.0",
     "lodash": "^4.14.1",
+    "react-router": "^2.6.1",
     "rimraf": "^2.4.3",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
